fixes bug where click on uncovered imgs was registering clicks\

--- a/style.css
+++ b/style.css
@@ -55,6 +55,8 @@ h1, .card-container, .results{
 img {
     object-fit: contain;
     display: block;
+    pointer-events: none;
+    user-select: none;
 }
 
 
